--- a/web1/src/app/common/common.component.html
+++ b/web1/src/app/common/common.component.html
@@ -36,9 +36,9 @@
                 aria-hidden="true"></i></a>
             <div class="drop-content" id="collapseExample">
               <a href="javascript:void(0)" [routerLink]="['/admin/productManageAssign']" id="collapseExample">Product
-                Manage</a>
+                Type</a>
               <a href="javascript:void(0)" [routerLink]="['/admin/productMasterAssign']" id="collapseExample">Product
-                Add</a>
+                Master</a>
               <a href="javascript:void(0)" [routerLink]="['/admin/addTypeAssign']" id="collapseExample">Add Manager</a>
             </div>
 
