--- a/web1/src/app/inventory/purchase-return/purchase-return.component.html
+++ b/web1/src/app/inventory/purchase-return/purchase-return.component.html
@@ -172,7 +172,7 @@
                                 </div>
                                 <div class="col-xl-1  col-lg-1 col-md-6 col-sm-12 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
-                                        <mat-label>Retrun Quantity</mat-label>
+                                        <mat-label>Return Quantity</mat-label>
                                         <input matInput name="Quantity" type=number min="0"
                                             #XferCountControl="ngModel" [(ngModel)]="xferItem.Quantity"  required>
                                         <mat-error *ngIf="XferCountControl.invalid && XferCountControl.touched">
