--- a/web1/src/app/product/add-manage/add-manage.component.css
+++ b/web1/src/app/product/add-manage/add-manage.component.css
@@ -19,3 +19,9 @@
 .mat-select-disabled .mat-select-value {
     color: rgb(0, 0, 0);
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
