--- a/web1/src/app/admin/product-manage/product-manage.component.html
+++ b/web1/src/app/admin/product-manage/product-manage.component.html
@@ -7,7 +7,7 @@
             <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
                 <div class="card">
                     <div class="header">
-                        <h2>Product Manage</h2>
+                        <h2>Product Type</h2>
                         <ul class="header-dropdown m-r--5"> </ul>
                     </div>
                     <div class="body">
@@ -230,7 +230,7 @@
             <div class="col-xl-4 col-lg-4 col-md-2 col-sm-2 mb-0">
                 <mat-form-field class="example-full-width mb-0">
                     <mat-label>Product Type</mat-label>
-                    <input matInput name="NewProduct" [(ngModel)]="newProduct.Name" required
+                    <input matInput name="NewProduct" disabled [(ngModel)]="newProduct.Name" required
                         #NewProductTypecontrol>
                 </mat-form-field>
             </div>
