--- a/web1/src/app/product/product-manage/product-manage.component.html
+++ b/web1/src/app/product/product-manage/product-manage.component.html
@@ -231,7 +231,7 @@
             <div class="col-xl-4 col-lg-4 col-md-2 col-sm-2 mb-0">
                 <mat-form-field class="example-full-width mb-0">
                     <mat-label>Product Type</mat-label>
-                    <input matInput name="NewProduct" [(ngModel)]="newProduct.Name" required
+                    <input matInput name="NewProduct" disabled [(ngModel)]="newProduct.Name" required
                         #NewProductTypecontrol>
                 </mat-form-field>
             </div>
